﻿shmuel 12.02.2016 12:41:32 +0200 - build 556

1. LuaFAR: fix handling PPIF_SELECTED.

shmuel 08.02.2016 23:14:30 +0200 - build 555

1. M#3175: "Отключить в LuaMacro редирект WOW64 для функций работы с реестром"
   LuaFAR: Во все функции работы с реестром, кроме win.DeleteRegKey, добавлен параметр "AccessMask".

shmuel 02.02.2016 12:53:04 +0200 - build 554

1. Функция Keys: добавлены новые специальные ключи:
     "EnOut"  - разрешить вывод на экран (то же, что mmode(1,0))
     "DisOut" - запретить вывод на экран (то же, что mmode(1,1))

2. Функция Keys: перед каждым ключом может быть указан множитель, например "3*Down" эквивалентно "Down Down Down".

shmuel 26.01.2016 16:09:42 +0200 - build 553

1. Префиксы, добавляемые функцией CommandLine, не работали, если не состояли полностью из "символов слова" ("%w+").
   Теперь в этих префиксах допускаются любые символы, кроме двоеточия и пробелов.

shmuel 20.12.2015 15:08:21 +0200 - build 552

1. LuaFAR: fix function win.SetRegKey.

shmuel 18.12.2015 22:09:39 +0200 - build 551

1. Ещё одно уточнение 549.

shmuel 18.12.2015 20:17:25 +0200 - build 550

1. Уточнение 549.

shmuel 18.12.2015 18:48:29 +0200 - build 549

1. LuaFAR: добавлена функция win.DeleteRegValue.

shmuel 18.12.2015 14:09:39 +0200 - build 548

1. Удалена макрофункция printf (mf.printf и _G.printf).

shmuel 13.12.2015 08:52:51 +0200 - build 547

1. При старте Фар не исполнялись автостартующие макросы, у которых area="Common".

zg 08.12.2015 03:51:59 +0200 - build 546

1. moonscript 0.4.0.

shmuel 15.11.2015 09:10:25 +0200 - build 545

1. Уточнение 543.

shmuel 11.11.2015 12:17:37 +0200 - build 544

1. MoonScript 0.3.2.

shmuel 10.11.2015 18:19:12 +0200 - build 543

1. LuaFAR (generic plugin):
   Очередная (после билда 533) попытка справиться с ситуацией, когда экспортируемые функции плагина
   вызываются из разных потоков с перекрытием во времени. "Перекрывающие" вызовы, поступающие не из